app_voting/03deploy_work.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"db"}]'
  labels:
    app: votting
    tier: work
    app.kubernetes.io/part-of: votting
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: votting
      tier: work
  template:
    metadata:
      labels:
        app: votting
        tier: work
    spec:
      containers:
      - image: dockersamples/examplevotingapp_worker
        name: worker
