app_voting/result_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: votting
    tier: result
    app.kubernetes.io/part-of: votting
  name: result
spec:
  replicas: 1
  selector:
    matchLabels:
      app: votting
      tier: result
  template:
    metadata:
      labels:
        app: votting
        tier: result
    spec:
      containers:
      - image: dockersamples/examplevotingapp_result
        name: result
        ports:
        - containerPort: 80
      serviceAccount: rodacomoroot
      serviceAccountName: rodacomoroot
