app_voting/vote_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: votting
    tier: vote
    app.kubernetes.io/part-of: votting
  name: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: votting
      tier: vote
  template:
    metadata:
      labels:
        app: votting
        tier: vote
    spec:
      containers:
      - image: dockersamples/examplevotingapp_vote
        name: vote
        ports:
        - containerPort: 80
      serviceAccount: rodacomoroot
      serviceAccountName: rodacomoroot
