app_voting/01deploy_postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/part-of: votting
    app: votting
    tier: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: votting
      tier: db
  template:
    metadata:
      labels:
        app: votting
        tier: db
    spec:
      containers:
      - image: postgres:15-alpine
        imagePullPolicy: IfNotPresent
        name: postgres
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: db-data
        livenessProbe:
          exec:
            command:
            - /usr/local/bin/psql
            - -U
            - postgres
            - -c
            - 'select 1'
          initialDelaySeconds: 15
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          exec:
            command:
            - /usr/local/bin/psql
            - -U
            - postgres
            - -c
            - 'select 1'
          initialDelaySeconds: 15
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
      volumes:
      - name: db-data
        emptyDir: {} 
      serviceAccount: rodacomoroot
      serviceAccountName: rodacomoroot
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: votting
    tier: db
  name: db
spec:
  ports:
  - name: "db-service"
    port: 5432
    targetPort: 5432
  selector:
    app: votting
    tier: db
