app_voting/02deploy_redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"worker"}]'
  labels:
    app: votting
    tier: redis
    app.kubernetes.io/part-of: votting
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: votting
      tier: redis
  template:
    metadata:
      labels:
        app: votting
        tier: redis
    spec:
      containers:
      - image: redis:alpine
        imagePullPolicy: IfNotPresent
        name: redis
        ports:
        - containerPort: 6379
        volumeMounts:
        - mountPath: /data
          name: redis-data
        livenessProbe:
          exec:
            command:
            - redis-cli
            - ping
          initialDelaySeconds: 20
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command:
            - redis-cli
            - ping
          initialDelaySeconds: 20
          timeoutSeconds: 5
      volumes:
      - name: redis-data
        emptyDir: {} 
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: votting
    tier: redis
  name: redis
spec:
  ports:
  - name: "redis-service"
    port: 6379
    targetPort: 6379
  selector:
    app: votting
    tier: redis
