app_voting/result_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: votting
    tier: result
  name: result
spec:
  ports:
  - name: "result-service"
    port: 80
    targetPort: 80
  selector:
    app: votting
    tier: result
