app_voting/vote_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: votting
    tier: vote
  name: vote
spec:
  ports:
  - name: "vote-service"
    port: 80
    targetPort: 80
  selector:
    app: votting
    tier: vote
