app_voting/05deploy_vote.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"redis"}]'
  labels:
    app: votting
    tier: vote
    app.kubernetes.io/part-of: votting
  name: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: votting
      tier: vote
  template:
    metadata:
      labels:
        app: votting
        tier: vote
    spec:
      containers:
      - image: dockersamples/examplevotingapp_vote
        name: vote
        ports:
        - containerPort: 80
      serviceAccount: rodacomoroot
      serviceAccountName: rodacomoroot
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: votting
    tier: vote
  name: vote-route
spec:
  host: 
  port:
    targetPort: vote-service
  to:
    kind: Service
    name: vote
    weight: 100
  wildcardPolicy: None
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: votting
    tier: vote
  name: vote
spec:
  ports:
  - name: "vote-service"
    port: 80
    targetPort: 80
  selector:
    app: votting
    tier: vote
