app_voting/result_route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: result-route
  labels:
    app: votting
    tier: result
spec:
  host: result-vt121170.apps.ocplab.vtal.intra
  port:
    targetPort: result-service
  to:
    kind: Service
    name: result
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
