app_voting/vote_route_http.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: votting
    tier: vote
  name: vote-route
  namespace: vt121170prj
spec:
  host: vote-vt121170.apps.ocplab.vtal.intra
  port:
    targetPort: vote-service
  to:
    kind: Service
    name: vote
    weight: 100
  wildcardPolicy: None
